# awesome-fastapi

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: skills.md
.github/workflows/: ci.yml
app/: main.py
app/api/: auth.py  items.py  orders.py  products.py  users.py
app/core/: errors.py
app/db/: session.py
app/dependencies/: auth.py  common.py  config.py
app/models/: __init__.py  item.py  order.py  product.py  user.py
app/schemas/: auth.py  item.py  order.py  product.py  user.py
tests/: conftest.py  test_api.py  test_auth.py  test_orders.py  test_products.py  test_users.py
