[project]
name = "awesome-fastapi"
version = "0.1.0"
description = "A minimal production-style FastAPI demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.0",
    "fastapi",
    "PyJWT>=2.0.0",
    "pydantic[email]>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
